ncc/testsuite/positive/params-lib.n
public interface IExternal {
   Invok (params x : array [object]) : void;
}

public class External : IExternal {
   public Invok (params _x : array [object]) : void {
     System.Console.WriteLine (_x.Length);
   }
}
