ncc/testsuite/negative/array.n


class A {
  foo () : void {
     _ = array.[0][] // E: array must have positive dimensions
   }
}